--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -25,6 +25,7 @@
       </main>
 
     </div> <!-- /container -->
+    <script>window.userToken = "<%= assigns[:user_id] %>"</script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
