--- a/web/templates/torrent/index.html.eex
+++ b/web/templates/torrent/index.html.eex
@@ -1,6 +1,6 @@
 <h2>Listing torrents</h2>
 
-<input id="searchTerm" type="text" value="<%= @search %>"></input>
+<input id="searchTerm" type="text" value="<%= if Map.has_key?(@params, "search") do @params["search"] end %>"></input>
 <script type="text/javascript">
 <!--
     function toggle_visibility(id) {
@@ -14,6 +14,6 @@
 </script>
 
 <div id="torrents">
-<%= render "torrents.html", torrents: @torrents %>
+<%= render "torrents.html", params: @params, torrents: @torrents %>
 
 </div>
