--- a/web/templates/torrent/index.html.eex
+++ b/web/templates/torrent/index.html.eex
@@ -1,6 +1,7 @@
 <h2>Listing torrents</h2>
 
-<input id="searchTerm" type="text" value="<%= if Map.has_key?(@torrents, "search") do @torrents["search"] end %>"></input>
+Search for: <input id="searchTerm" type="text" value="<%= if Map.has_key?(@params, "search") do @params["search"] end %>"></input>
+Show: <input id="page_size" type="text" value="<%= if Map.has_key?(@params, "page_size") do @params["page_size"] end %>"></input> per page
 <script type="text/javascript">
 <!--
     function toggle_visibility(id) {
@@ -14,6 +15,6 @@
 </script>
 
 <div id="torrents">
-<%= render "torrents.html", torrents: @torrents %>
+<%= render "torrents.html", params: @params, torrents: @torrents %>
 
 </div>
