--- a/web/templates/tracker/form.html.eex
+++ b/web/templates/tracker/form.html.eex
@@ -31,13 +31,13 @@
 
   <div class="form-group">
     <%= label f, :pagesAtOnce, class: "control-label" %>
-    <%= text_input f, :pagesAtOnce, class: "form-control" %>
+    <%= number_input f, :pagesAtOnce, class: "form-control" %>
     <%= error_tag f, :pagesAtOnce %>
   </div>
 
   <div class="form-group">
     <%= label f, :delayOnFail, class: "control-label" %>
-    <%= text_input f, :delayOnFail, class: "form-control" %>
+    <%= number_input f, :delayOnFail, class: "form-control" %>
     <%= error_tag f, :delayOnFail %>
   </div>
 
