--- a/web/templates/torrent/form.html.eex
+++ b/web/templates/torrent/form.html.eex
@@ -12,9 +12,9 @@
   </div>
 
   <div class="form-group">
-    <%= label f, :url, class: "control-label" %>
-    <%= text_input f, :url, class: "form-control" %>
-    <%= error_tag f, :url %>
+    <%= label f, :torrent_id, class: "control-label" %>
+    <%= text_input f, :torrent_id, class: "form-control" %>
+    <%= error_tag f, :torrent_id %>
   </div>
 
   <div class="form-group">
