--- a/web/templates/torrent/torrents.html.eex
+++ b/web/templates/torrent/torrents.html.eex
@@ -12,16 +12,16 @@
 
       <div>
         <div>
-          <%= unless is_nil torrent.json["images"] do %>
-            <%= for img <- (torrent.json["images"] |> String.trim |> String.split(" ")) do %>
+          <%= unless is_nil(torrent.json["images"]) or torrent.json["images"] == [] do %>
+            <%= for img <- torrent.json["images"] do %>
               <img src="<%= img %>" width="240" />
             <% end %>
           <% end %>
         </div>
-        <%= unless is_nil torrent.json["video"] do %>
-          <img src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="toggle_visibility('video<%= Enum.at(String.split(torrent.torrent_id, "="), 1) %>');" />
-          <div style="display: none;" id="video<%= Enum.at(String.split(torrent.torrent_id, "="), 1) %>">
-            <iframe width="420" height="315" src="<%= torrent.json["video"] %>"></iframe>
+        <%= unless is_nil(torrent.json["video"]) or torrent.json["video"] == [] do %>
+          <img src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="toggle_visibility('video<%= torrent.torrent_id %>');" />
+          <div style="display: none;" id="video<%= torrent.torrent_id %>">
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/<%= torrent.json["video"] %>"></iframe>
           </div>
         <% end %>
       </div>
