--- a/web/templates/torrent/torrents.html.eex
+++ b/web/templates/torrent/torrents.html.eex
@@ -30,13 +30,43 @@
       </div>
 
       <div>
-        <div>
+        <div class="images">
           <%= unless is_nil(torrent.json["images"]) or torrent.json["images"] == [] do %>
-            <%= for img <- torrent.json["images"] do %>
-              <img class="lazy" data-src="images/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>" width="240" />
-            <% end %>
+            <img class="lazy hover-shadow cursor"
+                  data-src="images/<%= torrent.json["images"] |> Enum.at(0) |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+                   width="240" onclick="openModal('<%= torrent.id %>myModal');currentSlide('<%= torrent.id %>myModal', 1)" />
+
+
+            <div id="<%= torrent.id %>myModal" class="modal" >
+
+              <div class="close cursor" onclick="closeModal('<%= torrent.id %>myModal')">&times;</div>
+              <div class="modal-content">
+
+
+              <%= for img <- torrent.json["images"] do %>
+                <div class="mySlides">
+                  <img class="lazy" data-src="images/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>" width="90%"/>
+                </div>
+              <% end %>
+
+              <div class="prev" onclick="plusSlides('<%= torrent.id %>myModal', -1)">&#10094;</div>
+              <div class="next" onclick="plusSlides('<%= torrent.id %>myModal', 1)">&#10095;</div>
+
+              <div class="caption-container">
+                <p id="caption"></p>
+              </div>
+
+              <%= for img <- torrent.json["images"] do %>
+                <div class="column">
+                  <img class="lazy lightbox cursor" class="lazy" data-src="images/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+                                  style="width:100%" onclick="currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(torrent.json["images"], fn(x) -> x == img end) %>)" alt="<%= img %>">
+                </div>
+              <% end %>
+            </div>
+
           <% end %>
         </div>
+
         <%= unless is_nil(torrent.json["video"]) or torrent.json["video"] == [] do %>
           <img src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="toggle_visibility('video<%= torrent.torrent_id %>');" />
           <div style="display: none;" id="video<%= torrent.torrent_id %>">
