--- a/web/templates/torrent/index.html.eex
+++ b/web/templates/torrent/index.html.eex
@@ -1,9 +1,47 @@
-<h2>Listing torrents</h2>
+<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filters-container" id="filters-container">
 
-Search for: <input id="searchTerm" type="text" value="<%= if Map.has_key?(@params, "search") do @params["search"] end %>"></input>
-Show: <input id="page_size" type="text" value="<%= if Map.has_key?(@params, "page_size") do @params["page_size"] end %>"></input> per page
+  <section id="filter-bar">
+    <span class="icon-close hidden-md hidden-lg close-filters-button" id="close-filters"></span>
+    <div id="active-filters-sidebar" class="property-box hidden-lg hidden-md">
+      <header class="open">&nbsp;Избрано филтриране</header>
+      <div class="active-filters">
 
-<div id="torrents">
-<%= render "torrents.html", params: @params, torrents: @torrents %>
+        <span class="filter"><a href="http://www.pazaruvaj.com/ruteri-c3144/" title="D-Link" onclick="_akq.push(['ak.filter.topRemove',47945681,this]);return!1;">D-Link&nbsp;<span class="icon-close"></span></a></span>
 
+        <a class="remove-all-filters" href="http://www.pazaruvaj.com/ruteri-c3144/" title="Изтрий филтрите" onclick="_akq.push(['ak.filter.remove']);return false;">Изтрий&nbsp;филтрите</a>
+      </div>
+    </div>
+
+
+
+      <div class="property-box resizable">
+        <header>Производител
+              <span class="close-filter-header icon-up-dir"></span>
+        </header>
+        <ul class="outer" data-akfiltergroup="2"><li class="checkedContainer">
+        <ul class="checked">
+        <li class="enabled active" id="47945681" data-akidx="2_10" data-aktype="man" data-akvalue="d-link" data-akpos="left" data-akentity="chb" data-akurl="http://www.pazaruvaj.com/ruteri-c3144/" data-pid="4634">
+        <a href="http://www.pazaruvaj.com/ruteri-c3144/" class="list-item" onclick="_akq.push(['ak.filter.toggle',47945681]);return!1;" title=" - Производител: D-Link"><span class="icon-check-checked"></span><span class="filterText">D-Link</span><small id="pc47945681"></small></a></li></ul></li>
+        <li class="scrollableCont"><div class="gradient topGradient" style="height:0px;"></div><div class="gradient bottomGradient"></div><ul class="unchecked scrollable">
+        <li class="enabled" id="47945682_spec" data-akidx="2_35" data-aktype="man" data-akvalue="tp-link" data-akpos="left" data-akentity="chb" data-akurl="http://www.pazaruvaj.com/ruteri-c3144/f:d-link,tp-link/" data-akspec="1" data-pid="4634"><a href="http://www.pazaruvaj.com/ruteri-c3144/tp-link/" class="list-item" onclick="_akq.push(['ak.filter.toggle',47945682]);return!1;" title=" - Производител: TP-LINK"><span class="icon-check-empty"></span><span class="filterText">TP-LINK</span><small id="pc47945682_spec">(+101)</small></a></li>
+        <li class="enabled" id="47945677_spec" data-akidx="2_3" data-aktype="man" data-akvalue="asus" data-akpos="left" data-akentity="chb" data-akurl="http://www.pazaruvaj.com/ruteri-c3144/f:asus,d-link/" data-akspec="1" data-pid="4634"><a href="http://www.pazaruvaj.com/ruteri-c3144/asus/" class="list-item" onclick="_akq.push(['ak.filter.toggle',47945677]);return!1;" title=" - Производител: ASUS"><span class="icon-check-empty"></span><span class="filterText">ASUS</span><small id="pc47945677_spec">(+45)</small></a></li>
+        <li class="enabled active" style="height:0;display:none;" id="47945681_spec" data-akidx="2_10" data-aktype="man" data-akvalue="d-link" data-akpos="left" data-akentity="chb" data-akurl="http://www.pazaruvaj.com/ruteri-c3144/" data-akspec="1" data-pid="4634"><a href="http://www.pazaruvaj.com/ruteri-c3144/" class="list-item" onclick="_akq.push(['ak.filter.toggle',47945681]);return!1;" title=" - Производител: D-Link"><span class="icon-check-checked"></span><span class="filterText">D-Link</span><small id="pc47945681_spec"></small></a></li>
+        <li class="enabled" id="47945676" data-akidx="2_41" data-aktype="man" data-akvalue="zyxel" data-akpos="left" data-akentity="chb" data-akurl="http://www.pazaruvaj.com/ruteri-c3144/f:d-link,zyxel/" data-pid="4634"><a href="http://www.pazaruvaj.com/ruteri-c3144/zyxel/" class="list-item" onclick="_akq.push(['ak.filter.toggle',47945676]);return!1;" title=" - Производител: ZyXEL"><span class="icon-check-empty"></span><span class="filterText">ZyXEL</span><small id="pc47945676">(+44)</small></a></li></ul></li><li class="resizeFilterGroup">=</li></ul>
+      </div>
+
+
+  </section>
+
+
+</div>
+
+<div style="float: left;">
+  <h2>Listing torrents</h2>
+
+  Search for: <input id="searchTerm" type="text" value="<%= if Map.has_key?(@params, "search") do @params["search"] end %>"></input>
+  Show: <input id="page_size" type="text" value="<%= if Map.has_key?(@params, "page_size") do @params["page_size"] end %>"></input> per page
+
+  <div id="torrents">
+    <%= render "torrents.html", params: @params, torrents: @torrents %>
+  </div>
 </div>
