--- a/web/templates/torrent/torrentMedia.html.eex
+++ b/web/templates/torrent/torrentMedia.html.eex
@@ -8,8 +8,8 @@
 
     <div id="<%= torrent.id %>myModal" class="modal" >
 
-      <div class="close cursor" onclick="closeModal('<%= torrent.id %>myModal')">&times;</div>
-      <div class="modal-content">
+      <div class="float close cursor" onclick="closeModal('<%= torrent.id %>myModal')"></div>
+      <div class="float modal-content">
 
         <div class="modal-viewer">
           <%= for img <- torrent.json["images"] do %>
@@ -28,18 +28,21 @@
 
         <%= for img <- torrent.json["images"] do %>
           <div class="column">
-            <img class="lazy lightbox cursor" class="lazy" data-src="images/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
-                            style="width:100%" onclick="currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(torrent.json["images"], fn(x) -> x == img end)+1 %>)" alt="<%= img %>">
+            <img class="lazy lightbox cursor" class="lazy" data-src="<%= img %>"
+                            style="width:100%" onclick="currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(torrent.json["images"], fn(x) -> x == img end) +1 %>)" alt="<%= img %>">
           </div>
         <% end %>
+
       </div>
+      <div class="float close cursor" onclick="closeModal('<%= torrent.id %>myModal')"></div>
     </div>
   <% end %>
-</div>
 
-<%= unless is_nil(torrent.json["video"]) or torrent.json["video"] == [] do %>
-  <img width="40" id="videoIcon<%= torrent.torrent_id %>" style="float: right"src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="document.getElementById('videoIcon<%= torrent.torrent_id %>').style.display = 'none';toggle_visibility('video<%= torrent.torrent_id %>');" />
-  <div style="display: none; float: right" id="video<%= torrent.torrent_id %>">
-    <iframe class="lazy" width="400" height="315" data-src="https://www.youtube.com/embed/<%= torrent.json["video"] %>" allowfullscreen></iframe>
-  </div>
-<% end %>
+  <%= unless is_nil(torrent.json["video"]) or torrent.json["video"] == [] do %>
+    <img width="40" id="videoIcon<%= torrent.torrent_id %>" style="float: right"src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="document.getElementById('videoIcon<%= torrent.torrent_id %>').style.display = 'none';toggle_visibility('video<%= torrent.torrent_id %>');" />
+    <div style="display: none; float: right" id="video<%= torrent.torrent_id %>">
+      <iframe class="lazy" width="400" height="315" data-src="https://www.youtube.com/embed/<%= torrent.json["video"] %>" allowfullscreen></iframe>
+    </div>
+  <% end %>
+
+</div>
