--- a/web/templates/torrent/torrentMedia.html.eex
+++ b/web/templates/torrent/torrentMedia.html.eex
@@ -2,8 +2,8 @@
 <div class="images">
   <%= unless is_nil(torrent.json["images"]) or torrent.json["images"] == [] do %>
     <img class="lazy hover-shadow cursor"
-          data-src="images/<%= torrent.json["images"] |> Enum.at(0) |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
-           width="240" onclick="openModal('<%= torrent.id %>myModal');currentSlide('<%= torrent.id %>myModal', 1)" />
+         data-src="images/<%= torrent.json["images"] |> Enum.at(0) |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+         onclick="openModal('<%= torrent.id %>myModal');currentSlide('<%= torrent.id %>myModal', 1)" />
 
 
     <div id="<%= torrent.id %>myModal" class="modal" >
@@ -28,7 +28,7 @@
 
         <%= for img <- torrent.json["images"] do %>
           <div class="column">
-            <img class="lazy lightbox cursor" class="lazy" data-src="<%= img %>"
+            <img class="lazy lightbox cursor" class="lazy" data-src="images/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
                             style="width:100%" onclick="currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(torrent.json["images"], fn(x) -> x == img end) +1 %>)" alt="<%= img %>">
           </div>
         <% end %>
